@@ -58,6 +58,7 @@ quote_report_description=Report Quote
 quote_rating_up_description=Quote Rating Up
 quote_rating_down_description=Quote Rating Down
 quote_rating_description=Quote Rating
+quote_vote_count_description=Quote Vote Count
 quote_date_description=Quote Submission Date
 quote_edit_description=Edit Quote
 quote_remove_description=Remove Quote
