@@ -52,6 +52,7 @@ quote_report_description=Quote rapporteren
 quote_rating_up_description=Score van quote verhogen
 quote_rating_down_description=Score van quote verlagen
 quote_rating_description=Score van quote
+quote_vote_count_description=Aantal stemmen voor quote
 quote_date_description=Datum toevoeging quote
 quote_edit_description=Quote bewerken
 quote_remove_description=Quote verwijderen
