@@ -40,6 +40,8 @@
 					onclick="return sendRating(this, <TMPL_VAR NAME="ID">)"
 					title="<TMPL_VAR NAME="RATING_UP_DESCRIPTION">" class="quote-rating-up"><TMPL_VAR NAME="UP">&uarr;</a>
 					<span id="quote-rating-<TMPL_VAR NAME="ID">" class="quote-rating" title="<TMPL_VAR NAME="RATING_DESCRIPTION">"><TMPL_VAR NAME="RATING_TEXT"></span>
+					<span id="quote-vote-count-<TMPL_VAR NAME="ID">" class="quote-vote-count" title="<TMPL_VAR NAME="VOTE_COUNT_DESCRIPTION">"><TMPL_VAR NAME="VOTE_COUNT"></span>
+					<span id="quote-vote-count-<TMPL_VAR NAME="ID">" class="quote-vote-count" title="<TMPL_VAR NAME="VOTE_COUNT_DESCRIPTION">"><TMPL_VAR NAME="VOTE_COUNT"></span>
 					<a href="<TMPL_VAR NAME="RATING_DOWN_URL">" rel="nofollow"
 					onclick="return sendRating(this, <TMPL_VAR NAME="ID">)"
 					title="<TMPL_VAR NAME="RATING_DOWN_DESCRIPTION">" class="quote-rating-down"><TMPL_VAR NAME="DOWN">&darr;</a>
