@@ -4,6 +4,7 @@
 \_____________________________________________________________________________/
 
 * Added statistics page
+* Now keeping (and displaying) vote counts per quote
 * Made tag cloud ignore unapproved quotes
 * Made templates use HTML::Template's caching feature, which is pretty fast
 * Template parameters are now global, which means you can include parameters
